fixing white space on bottom of mobiles

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,6 +28,7 @@ body {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   color: rgb(223, 223, 223);
+  border: 1px solid transparent;
 }
 
 .main-wrapper {
